--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.3",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
