--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.3",
     "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.42",
-    "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "typescript": "^4.7.3"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.43",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6"
   }
